--- a/src/assets/scss/themes.scss
+++ b/src/assets/scss/themes.scss
@@ -303,6 +303,7 @@ body {
   }
 
   .css-1nmdiq5-menu {
+    z-index: 10 !important;
     background-color: var(--#{$prefix}secondary-bg);
     color: var(--#{$prefix}body-color);
     border-color: var(--#{$prefix}border-color);
