--- a/src/assets/scss/pages/_authentication.scss
+++ b/src/assets/scss/pages/_authentication.scss
@@ -35,7 +35,7 @@
 }
 
 .auth-one-bg {
-  background-image: url("/images/auth-one-bg.jpg");
+  background-image: url("/images/auth-one-bg1.jpg");
   background-position: center;
   background-size: cover;
 
